--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\lokes\AppData\Local\Temp\testng-eclipse-138869051\testng-customsuite.xml</span>
+                    <span>C:\Users\lokes\AppData\Local\Temp\testng-eclipse--685665830\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">6 methods,   6 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,12 +103,32 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="automation.Implicit_wait" class="method navigator-link" hash-for-method="Withoutimplicitwaitexample">Withoutimplicitwaitexample</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="automation.Java_Assignment" class="method navigator-link" hash-for-method="alert">alert</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="automation.Implicit_wait" class="method navigator-link" hash-for-method="implicitwaitexample">implicitwaitexample</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="automation.Java_Assignment" class="method navigator-link" hash-for-method="allelements">allelements</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="automation.Java_Assignment" class="method navigator-link" hash-for-method="dropdown">dropdown</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="automation.Java_Assignment" class="method navigator-link" hash-for-method="entertext">entertext</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="automation.Java_Assignment" class="method navigator-link" hash-for-method="google">google</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="automation.Java_Assignment" class="method navigator-link" hash-for-method="linktest">linktest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,21 +146,49 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">automation.Implicit_wait</span>
+              <span class="class-name">automation.Java_Assignment</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="Withoutimplicitwaitexample">
-                  </a> <!-- Withoutimplicitwaitexample -->
-                  <span class="method-name">Withoutimplicitwaitexample</span>
+                  <a name="alert">
+                  </a> <!-- alert -->
+                  <span class="method-name">alert</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="implicitwaitexample">
-                  </a> <!-- implicitwaitexample -->
-                  <span class="method-name">implicitwaitexample</span>
+                  <a name="allelements">
+                  </a> <!-- allelements -->
+                  <span class="method-name">allelements</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="dropdown">
+                  </a> <!-- dropdown -->
+                  <span class="method-name">dropdown</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="entertext">
+                  </a> <!-- entertext -->
+                  <span class="method-name">entertext</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="google">
+                  </a> <!-- google -->
+                  <span class="method-name">google</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="linktest">
+                  </a> <!-- linktest -->
+                  <span class="method-name">linktest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -148,7 +196,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\lokes\AppData\Local\Temp\testng-eclipse-138869051\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\lokes\AppData\Local\Temp\testng-eclipse--685665830\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -157,7 +205,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;automation.Implicit_wait&quot;/&gt;
+      &lt;class name=&quot;automation.Java_Assignment&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -197,20 +245,36 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(6);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Withoutimplicitwaitexample')
-data.setCell(0, 2, 'automation.Implicit_wait')
-data.setCell(0, 3, 21557);
+data.setCell(0, 1, 'alert')
+data.setCell(0, 2, 'automation.Java_Assignment')
+data.setCell(0, 3, 13917);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'implicitwaitexample')
-data.setCell(1, 2, 'automation.Implicit_wait')
-data.setCell(1, 3, 6977);
+data.setCell(1, 1, 'allelements')
+data.setCell(1, 2, 'automation.Java_Assignment')
+data.setCell(1, 3, 6446);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'dropdown')
+data.setCell(2, 2, 'automation.Java_Assignment')
+data.setCell(2, 3, 1877);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'google')
+data.setCell(3, 2, 'automation.Java_Assignment')
+data.setCell(3, 3, 1658);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'linktest')
+data.setCell(4, 2, 'automation.Java_Assignment')
+data.setCell(4, 3, 1252);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'entertext')
+data.setCell(5, 2, 'automation.Java_Assignment')
+data.setCell(5, 3, 938);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 28 seconds</span>
+              <span class="suite-total-time">Total running time: 26 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -236,23 +300,79 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">automation.Implicit_wait</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">automation.Java_Assignment</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">CreateDriver</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">Withoutimplicitwaitexample</span>
-                <span class="method-start">1652 ms</span>
+                <span class="method-name">alert</span>
+                <span class="method-start">2198 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">closingbrowsers</span>
+                <span class="method-start">16125 ms</span>
+              </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">CreateDriver</span>
-                <span class="method-start">23214 ms</span>
+                <span class="method-start">16878 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">implicitwaitexample</span>
-                <span class="method-start">24267 ms</span>
+                <span class="method-name">allelements</span>
+                <span class="method-start">17779 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">closingbrowsers</span>
+                <span class="method-start">24227 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">CreateDriver</span>
+                <span class="method-start">24421 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">dropdown</span>
+                <span class="method-start">25316 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">closingbrowsers</span>
+                <span class="method-start">27194 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">CreateDriver</span>
+                <span class="method-start">27425 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">entertext</span>
+                <span class="method-start">28299 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">closingbrowsers</span>
+                <span class="method-start">29242 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">CreateDriver</span>
+                <span class="method-start">29470 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">google</span>
+                <span class="method-start">30296 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">closingbrowsers</span>
+                <span class="method-start">31954 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">CreateDriver</span>
+                <span class="method-start">32186 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">linktest</span>
+                <span class="method-start">33056 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">closingbrowsers</span>
+                <span class="method-start">34312 ms</span>
+              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
