--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\lokes\AppData\Local\Temp\testng-eclipse--685665830\testng-customsuite.xml</span>
+                    <span>C:\Users\lokes\AppData\Local\Temp\testng-eclipse-1455129314\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">6 methods,   6 passed</span>
+                    <span class="method-stats">9 methods,   9 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,6 +101,11 @@
                       <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
                     </span>
                     <div class="method-list-content passed suite-Default_suite">
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="automation.Java_Assignment" class="method navigator-link" hash-for-method="Explicitwait">Explicitwait</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="automation.Java_Assignment" class="method navigator-link" hash-for-method="alert">alert</a> <!-- method navigator-link -->
@@ -131,6 +136,16 @@
                         <a href="#" panel-name="suite-Default_suite" title="automation.Java_Assignment" class="method navigator-link" hash-for-method="linktest">linktest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="automation.Java_Assignment" class="method navigator-link" hash-for-method="multiplewindows">multiplewindows</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="automation.Java_Assignment" class="method navigator-link" hash-for-method="screenshot">screenshot</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
                   </li>
                 </ul>
@@ -149,6 +164,13 @@
               <span class="class-name">automation.Java_Assignment</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="Explicitwait">
+                  </a> <!-- Explicitwait -->
+                  <span class="method-name">Explicitwait</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="alert">
@@ -191,12 +213,26 @@
                   <span class="method-name">linktest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="multiplewindows">
+                  </a> <!-- multiplewindows -->
+                  <span class="method-name">multiplewindows</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="screenshot">
+                  </a> <!-- screenshot -->
+                  <span class="method-name">screenshot</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\lokes\AppData\Local\Temp\testng-eclipse--685665830\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\lokes\AppData\Local\Temp\testng-eclipse-1455129314\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -245,36 +281,48 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(6);
+data.addRows(9);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'alert')
 data.setCell(0, 2, 'automation.Java_Assignment')
-data.setCell(0, 3, 13917);
+data.setCell(0, 3, 14085);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'allelements')
 data.setCell(1, 2, 'automation.Java_Assignment')
-data.setCell(1, 3, 6446);
+data.setCell(1, 3, 5771);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'dropdown')
+data.setCell(2, 1, 'multiplewindows')
 data.setCell(2, 2, 'automation.Java_Assignment')
-data.setCell(2, 3, 1877);
+data.setCell(2, 3, 4254);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'google')
+data.setCell(3, 1, 'Explicitwait')
 data.setCell(3, 2, 'automation.Java_Assignment')
-data.setCell(3, 3, 1658);
+data.setCell(3, 3, 4011);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'linktest')
+data.setCell(4, 1, 'dropdown')
 data.setCell(4, 2, 'automation.Java_Assignment')
-data.setCell(4, 3, 1252);
+data.setCell(4, 3, 3195);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'entertext')
+data.setCell(5, 1, 'screenshot')
 data.setCell(5, 2, 'automation.Java_Assignment')
-data.setCell(5, 3, 938);
+data.setCell(5, 3, 2399);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'linktest')
+data.setCell(6, 2, 'automation.Java_Assignment')
+data.setCell(6, 3, 1728);
+data.setCell(7, 0, 7)
+data.setCell(7, 1, 'google')
+data.setCell(7, 2, 'automation.Java_Assignment')
+data.setCell(7, 3, 952);
+data.setCell(8, 0, 8)
+data.setCell(8, 1, 'entertext')
+data.setCell(8, 2, 'automation.Java_Assignment')
+data.setCell(8, 3, 826);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 26 seconds</span>
+              <span class="suite-total-time">Total running time: 37 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -306,72 +354,108 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">alert</span>
-                <span class="method-start">2198 ms</span>
+                <span class="method-name">Explicitwait</span>
+                <span class="method-start">1538 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closingbrowsers</span>
-                <span class="method-start">16125 ms</span>
+                <span class="method-start">5552 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">CreateDriver</span>
-                <span class="method-start">16878 ms</span>
+                <span class="method-start">5767 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">alert</span>
+                <span class="method-start">6788 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">closingbrowsers</span>
+                <span class="method-start">20883 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">CreateDriver</span>
+                <span class="method-start">21222 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">allelements</span>
-                <span class="method-start">17779 ms</span>
+                <span class="method-start">22164 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closingbrowsers</span>
-                <span class="method-start">24227 ms</span>
+                <span class="method-start">27938 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">CreateDriver</span>
-                <span class="method-start">24421 ms</span>
+                <span class="method-start">28120 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">dropdown</span>
-                <span class="method-start">25316 ms</span>
+                <span class="method-start">29033 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closingbrowsers</span>
-                <span class="method-start">27194 ms</span>
+                <span class="method-start">32230 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">CreateDriver</span>
-                <span class="method-start">27425 ms</span>
+                <span class="method-start">32439 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">entertext</span>
-                <span class="method-start">28299 ms</span>
+                <span class="method-start">33314 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closingbrowsers</span>
-                <span class="method-start">29242 ms</span>
+                <span class="method-start">34140 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">CreateDriver</span>
-                <span class="method-start">29470 ms</span>
+                <span class="method-start">34392 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">google</span>
-                <span class="method-start">30296 ms</span>
+                <span class="method-start">35402 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closingbrowsers</span>
-                <span class="method-start">31954 ms</span>
+                <span class="method-start">36362 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">CreateDriver</span>
-                <span class="method-start">32186 ms</span>
+                <span class="method-start">36668 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">linktest</span>
-                <span class="method-start">33056 ms</span>
+                <span class="method-start">37682 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closingbrowsers</span>
-                <span class="method-start">34312 ms</span>
+                <span class="method-start">39412 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">CreateDriver</span>
+                <span class="method-start">39606 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">multiplewindows</span>
+                <span class="method-start">40582 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">closingbrowsers</span>
+                <span class="method-start">44842 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">CreateDriver</span>
+                <span class="method-start">45120 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">screenshot</span>
+                <span class="method-start">45958 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">closingbrowsers</span>
+                <span class="method-start">48360 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
